manifests_website/production/increase_replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
      resources:
        requests:
          memory: "50Mi"
          cpu: "30m"
        limits:
          memory: "500Mi"
          cpu: "2000m"
