manifests_website/production/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-lb
  labels:
    app: website
spec:
  type: LoadBalancer
  ports:
  - name: website
    port: 80
    targetPort: 80
  selector:
    app: website
