manifests_website/production/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress-rule
spec:
  ingressClassName: nginx
  rules:
  - host: website.tradingaps.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website-service
            port: 
              number: 80
#  tls:
#  - hosts:
#      - website.tradingaps.com
#    secretName: website
